использую vite-plugin-pwa

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
   <link rel="icon" type="image/svg+xml" href="./icons/vite.svg" />
   <link rel="apple-touch-icon" href="./icons/logo192.png" />
-  <link rel="manifest" href="./std-manifest.json" />
+  <!-- <link rel="manifest" href="./std-manifest.json" /> -->
   
   <title>language club</title>
+  <!--  -->
 </head>
 
 <body>
